DFG Node::ref() and Node::deref() should not return bool, and should have postfixRef variants https://bugs.webkit.org/show_bug.cgi?id=107147

Reviewed by Mark Hahnenberg.

This small refactoring will enable a world where ref() returns Node*, which is useful for
https://bugs.webkit.org/show_bug.cgi?id=106868.  Also, while this refactoring does lead to
slightly less terse code, it's also slightly more self-explanatory.  I could never quite
remember what the meaning of the bool return from ref() and deref() was.

* dfg/DFGGraph.cpp:
(JSC::DFG::Graph::collectGarbage):
* dfg/DFGGraph.h:
(JSC::DFG::Graph::ref):
(JSC::DFG::Graph::deref):
* dfg/DFGNode.h:
(JSC::DFG::Node::ref):
(Node):
(JSC::DFG::Node::postfixRef):
(JSC::DFG::Node::deref):
(JSC::DFG::Node::postfixDeref):



Canonical link: https://commits.webkit.org/125397@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140030 268f45cc-cd09-0410-ab3c-d52691b4dbfc