Source/JavaScriptCore/dfg/DFGNode.h
@@ -909,10 +909,14 @@ struct Node {
         return m_refCount;
     }
 
-    // returns true when ref count passes from 0 to 1.
-    bool ref()
+    void ref()
     {
-        return !m_refCount++;
+        m_refCount++;
+    }
+
+    unsigned postfixRef()
+    {
+        return m_refCount++;
     }
 
     unsigned adjustedRefCount()
@@ -925,13 +929,16 @@ struct Node {
         m_refCount = refCount;
     }
     
-    // Derefs the node and returns true if the ref count reached zero.
-    // In general you don't want to use this directly; use Graph::deref
-    // instead.
-    bool deref()
+    void deref()
     {
         ASSERT(m_refCount);
-        return !--m_refCount;
+        --m_refCount;
+    }
+    
+    unsigned postfixDeref()
+    {
+        ASSERT(m_refCount);
+        return m_refCount--;
     }
     
     Edge child1()
